--- a/instant/theme/about.html
+++ b/instant/theme/about.html
@@ -37,14 +37,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="/">MAGGIE JOHNSON</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="<%= @home %>"><a href="/">HOME</a></li>
+            <li class="<%= @about %>"><a href="/about">ABOUT</a></li>
+            <li class="<%= @works %>"><a href="/works">WORKS</a></li>
+            <li class="<%= @tweets %>"><a href="/tweets">TWEETS</a></li>
+            <li class="<%= @insta %>"><a href="/insta">INSTAGRAM</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
