--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -46,7 +46,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="<%= @works %>">WORKS</a></li>
             <li><a href="<%= @tweets %>">TWEETS</a></li>
-            <li><a href="<%= @instagram %>">INSTAGRAM</a></li>
+            <li><a href="<%= @insta %>">INSTAGRAM</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -72,7 +72,7 @@
 	
 	<!-- +++++ Projects Section +++++ -->
 	
-	<div class="container pt">
+<!--	<div class="container pt">
 		<div class="row mt centered">	
 			<div class="col-lg-4">
 				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
@@ -87,7 +87,7 @@
 				<p>VIKINGS</p>
 			</div>
 		</div><!-- /row -->
-		<div class="row mt centered">	
+<!--		<div class="row mt centered">	
 			<div class="col-lg-4">
 				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
 				<p>YODA</p>
@@ -101,7 +101,7 @@
 				<p>CHIEFS</p>
 			</div>
 		</div><!-- /row -->
-	</div><!-- /container -->
+<!--	</div><!-- /container -->
 	
 	
 	<!-- +++++ Footer Section +++++ -->
